src/common/components/Avatar/Avatar.module.css
.Wrapper {
  position: relative;
}

.Wrapper_size_small {
  height: 2rem;
  width: 2rem;
}

.Wrapper_size_medium {
  height: 3rem;
  width: 3rem;
}

.Wrapper_size_large {
  height: 4rem;
  width: 4rem;
}

.Wrapper_size_fill {
  width: 100%;
  padding-bottom: 100%;
}

.Image {
  border-radius: 15%;
  width: 100%;
  height: 100%;
  position: absolute;
  top: -9999px;
  left: -9999px;
  right: -9999px;
  bottom: -9999px;
  margin: auto;
}

.Status {
  display: block;
  position: absolute;
  background: none;
  border-radius: 50%;
}

.Status.online {
  background: greenyellow;
}

